k8-yamls/deploy-mongo.yaml
kind: Deployment
apiVersion: apps/v1 # kubectl api-resources
metadata:
  name: deploy-mongo
  namespace: er 
spec:
  selector:
    matchLabels:
      app: mongodemo
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: mongodemo
    spec:
      containers:
        - name: k-mongo
          image: mongo
          args: ["--dbpath","/data/db"]
          volumeMounts:
          - name: "mongo-data-dir"
            mountPath: "/data/db"

      volumes:
      - name: "mongo-data-dir"
        persistentVolumeClaim:
          claimName: "mongo-pv"
