k8-yamls/deploy-node.yaml
---
kind: Deployment
apiVersion: apps/v1 # kubectl api-resources
metadata:
  name: deploy-node
  namespace: er 
spec:
  selector:
    matchLabels:
      nodedemo: nodedemo
  replicas: 1
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        nodedemo: nodedemo
    spec:
      containers:
        - name: k-node
          image: docker.io/jgenso/node-demo:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
---
