k8-yamls/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/echo", "$(MONGO_HOST) $(MONGO_DB)" ]
  restartPolicy: Never
