k8-yamls/services-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongodemo-service
  name: mongodemo-svc
  namespace: er
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
    nodePort: 32000
  selector:
    app: mongodemo
  type: NodePort
status:
  loadBalancer: {}
