k8-yamls/services-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodedemo-svc
  namespace: er
spec:
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31000
  selector:
    mongodemo: nodedemo
  type: NodePort
status:
  loadBalancer: {}
