k8-yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: hello-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: elvis.ramirez.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodedemo-svc
            port:
              number: 3000
